FIX: color of Share button changed on mobile

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -372,7 +372,7 @@
     }
 
     &:before {
-      color: $secondary-color;
+      color: $primary-color;
     }
 
     &.btn {
